--- a/app/src/main/res/layout/club_activity.xml
+++ b/app/src/main/res/layout/club_activity.xml
@@ -8,56 +8,43 @@
     tools:context="com.wlmac.lyonsden2_android.resourceActivities.ClubActivity">
 
     <android.support.v7.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
+        style="@style/LyonsToolBar"
         app:titleTextColor="@color/accent"
         app:title="@string/ClubSTitle"
         android:id="@+id/toolbar">
     </android.support.v7.widget.Toolbar>
 
-    <!-- Title, Description & Image Container -->
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar"
-        android:paddingTop="5dp"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="8dp"
         android:background="@color/background"
-        android:orientation="horizontal"
-        android:clipChildren="true"
         android:id="@+id/ClubSTopSection">
 
-        <!-- Image -->
-        <ImageView
-            android:layout_width="@dimen/ISImageViewWidth"
-            android:layout_height="@dimen/ISImageViewHeight"
-            android:id="@+id/ClubSImageView"/>
-
-        <!-- Title & Description Container -->
+        <!-- Viewing Box -->
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:orientation="vertical">
+
+            android:orientation="vertical"
+            android:padding="5dp"
+            android:background="@color/background"
+            android:id="@+id/ClubSViewBox">
 
             <!-- Title Label -->
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="start"
                 android:textColor="@color/accent"
-                android:textSize="@dimen/ClubSTitleTextSize"
+                android:text="text"
+                android:textSize="@dimen/textSizeSubtitle"
                 android:id="@+id/ClubSTitleLabel"/>
 
             <!-- Description Label -->
@@ -67,24 +54,63 @@
                 android:layout_weight="2"
                 android:layout_marginTop="8dp"
                 android:textColor="@color/accent"
-                android:textSize="@dimen/ClubSDescriptionTextSize"
+                android:text="text"
+                android:textSize="@dimen/textSizeLabel"
                 android:id="@+id/ClubSDescriptionLabel"/>
         </LinearLayout>
-    </LinearLayout>
 
-    <!-- Leaders List Label -->
+        <!-- Editing Box -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:orientation="vertical"
+            android:padding="5dp"
+            android:id="@+id/ClubSEditBox">
+
+            <!-- Title Label -->
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:padding="2dp"
+                android:background="@drawable/text_view_edit"
+                android:inputType="text"
+                android:textColor="@color/whiteText"
+                android:text="textField"
+                android:textSize="@dimen/textSizeSubtitle"
+                android:id="@+id/ClubSTitleField"/>
+
+            <!-- Description Label -->
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/ClubSDescriptionHeight"
+                android:layout_weight="2"
+                android:layout_marginTop="8dp"
+                android:padding="2dp"
+                android:background="@drawable/text_view_edit"
+                android:textColor="@color/whiteText"
+                android:gravity="top"
+                android:inputType="textMultiLine"
+                android:text="textField"
+                android:textSize="@dimen/textSizeLabel"
+                android:id="@+id/ClubSDescriptionField"/>
+        </LinearLayout>
+    </RelativeLayout>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ClubSTopSection"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="8dp"
+        android:layout_below="@id/ClubSTopSection"
+        android:background="@color/background"
         android:maxLines="1"
         android:textColor="@color/accent"
-        android:textSize="@dimen/ClubSMemberTextSize"
+        android:text="text"
+        android:textSize="@dimen/textSizeDetails"
         android:id="@+id/ClubSLeaderList"/>
 
     <!-- Clubs Announcements List -->
