--- a/app/src/main/res/layout/list_expandable_collapsed.xml
+++ b/app/src/main/res/layout/list_expandable_collapsed.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:textSize="@dimen/textSizeLabel"
         android:textColor="@color/accent"
         android:maxLines="1"
         android:id="@+id/LECTitle"/>
