--- a/app/src/main/res/layout/lyons_alert_layout.xml
+++ b/app/src/main/res/layout/lyons_alert_layout.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/accent"
+    android:background="@color/background"
+    android:padding="8dp"
     android:orientation="vertical">
 
     <TextView
@@ -11,7 +12,7 @@
         android:layout_margin="10dp"
         android:layout_gravity="center_horizontal"
         android:textColor="@color/accent"
-        android:textSize="17sp"
+        android:textSize="@dimen/textSizeLabel"
         android:id="@+id/LATitle"/>
 
     <TextView
@@ -20,7 +21,7 @@
         android:layout_margin="10dp"
         android:layout_gravity="center_horizontal"
         android:textColor="@color/accent"
-        android:textSize="14sp"
+        android:textSize="@dimen/textSizeDetails"
         android:id="@+id/LASubtitle"/>
 
     <EditText
@@ -28,8 +29,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:layout_gravity="center_horizontal"
-        android:textColor="@color/whiteText"
-        android:textSize="14sp"
+        android:textColor="@color/accent"
+        android:textSize="@dimen/textSizeDetails"
         android:id="@+id/LAInput"/>
 
     <LinearLayout
@@ -46,6 +47,7 @@
             android:layout_marginEnd="5dp"
             android:background="@color/accent"
             android:textColor="@color/whiteText"
+            android:textSize="@dimen/textSizeButton"
             android:id="@+id/LAButtonLeft"/>
 
         <Button
@@ -57,6 +59,7 @@
             android:layout_marginEnd="5dp"
             android:background="@color/accent"
             android:textColor="@color/whiteText"
+            android:textSize="@dimen/textSizeButton"
             android:id="@+id/LAButtonRight"/>
     </LinearLayout>
 </LinearLayout>
