--- a/app/src/main/res/layout/toast_view.xml
+++ b/app/src/main/res/layout/toast_view.xml
@@ -1,26 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:background="@drawable/toast_view_background"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="5dp"
+    android:background="@drawable/toast_view_background"
+    android:orientation="vertical">
 
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="gone"
+        android:layout_gravity="center"
         android:indeterminate="true"
         android:indeterminateDrawable="@drawable/loading_circle"
         android:id="@+id/TVLoadingWheel" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/TVLoadingWheel"
-        android:visibility="gone"
-        android:textSize="17sp"
-        android:textColor="@color/accent"
-        android:maxLines="3"
-        android:id="@+id/TVLoadingLabel" />
-</RelativeLayout>
+</LinearLayout>
