--- a/app/src/main/res/layout/user_activity.xml
+++ b/app/src/main/res/layout/user_activity.xml
@@ -16,15 +16,7 @@
         tools:context="com.wlmac.lyonsden2_android.UserActivity">
 
         <android.support.v7.widget.Toolbar
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:background="?attr/colorPrimary"
-            android:minHeight="?attr/actionBarSize"
+            style="@style/LyonsToolBar"
             app:titleTextColor="@color/accent"
             app:title="@string/USTitle"
             android:id="@+id/toolbar">
