--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="invalidStroke">#FF0030</color>
     <color name="listViewBackground">#EDF7FF</color>
     <color name="listDivider">#607D8B</color>
+    <color name="listSectionSeparator">#C2DAED</color>
 
 
     <color name="cellDefault">#80022a64</color>
