--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,16 @@
         <item name="android:textColorPrimary">@color/accent</item>
     </style>
 
+    <style name="LyonsToolBar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_alignParentTop">true</item>
+        <item name="android:layout_alignParentLeft">true</item>
+        <item name="android:layout_alignParentRight">true</item>
+        <item name="android:background">?attr/colorPrimary</item>
+        <item name="android:minHeight">?attr/actionBarSize</item>
+    </style>
+
     <style name="DrawerListStyle">
         <item name="android:layout_width">240dp</item>
         <item name="android:layout_height">match_parent</item>
