--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -152,7 +152,7 @@
         <item name="android:clickable">false</item>
         <item name="android:inputType">none</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/whiteText</item>
+        <item name="android:textColor">@color/accent</item>
     </style>
 
     <style name="UserButton">
