--- a/app/src/main/res/drawable/splash_screen.xml
+++ b/app/src/main/res/drawable/splash_screen.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@android:color/white"/>
+    <item android:drawable="@android:color/black"/>
     <item>
-        <bitmap android:src="@mipmap/den_logo" android:gravity="center"/>
+        <bitmap android:src="@drawable/app_icon_1024x1024_no_bg" android:gravity="center"/>
     </item>
 </layer-list>
