--- a/app/src/main/res/layout/contact_activity.xml
+++ b/app/src/main/res/layout/contact_activity.xml
@@ -102,7 +102,7 @@
                 android:layout_alignParentStart="true"
                 android:tag="1"
                 android:onClick="displayList"
-                android:text="@string/CSReport" />
+                android:text="@string/CSLicence" />
         </RelativeLayout>
 
         <Button
