--- a/app/src/main/res/layout/home_activity_content.xml
+++ b/app/src/main/res/layout/home_activity_content.xml
@@ -1,16 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/coordinator_layout"
     android:background="@color/background"
     android:orientation="vertical">
 
+
+    <android.support.design.widget.CollapsingToolbarLayout
+        android:id="@+id/htab_collapse_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="296dp"
+        android:fitsSystemWindows="true"
+        app:contentScrim="?attr/colorPrimary"
+        app:layout_scrollFlags="scroll|exitUntilCollapsed">
     <!-- Top Views Container -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id = "@+id/topViews"
-        android:background="@color/background">
+        android:background="@color/background"
+        app:layout_collapseMode="parallax">
 
         <!-- Today Is Day -->
         <TextView
@@ -43,7 +55,8 @@
             android:layout_alignParentStart="true"
             android:orientation="horizontal"
             android:layout_below="@+id/HSDayLabel"
-            android:id="@+id/HSCourseContainer">
+            android:id="@+id/HSCourseContainer"
+            >
 
             <!-- Period 1 Container -->
             <LinearLayout
@@ -190,6 +203,7 @@
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
+    </android.support.design.widget.CollapsingToolbarLayout>
 
     <!-- Announcements Container -->
     <ListView
