--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -96,6 +96,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
             android:orientation="horizontal"
+            android:background="@color/blackText"
             android:layout_below="@+id/HSDayLabel"
             android:id="@+id/HSCourseContainer">
 
@@ -111,6 +112,7 @@
                     android:id="@+id/HSSpare0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:visibility="invisible"
                     android:text="@string/HSSpare"
                     android:layout_centerInParent="true"/>
 
